# wit-files

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
example/: index.html  index.ts  index.tsx  package.json  tsconfig.json
rune/: env.wit  guest-v1.wit  proc-block-v1.wit  proc-block-v2.wit  rune-v0.wit  rune-v1.wit  runtime-v1.wit  runtime-v2.wit
rune/inspect/: index.tsx  package.json  tsconfig.json
rune/js/: README.md  package.json
rune/js-host/: .parcelrc  index.d.ts  package.json  tsconfig.json
rune/js-host/bindings/: intrinsics.js  rune-v1.d.ts  rune-v1.js  runtime-v1.d.ts  runtime-v1.js
rune/js/bindings/: guest-v1.d.ts  guest-v1.js  intrinsics.js  proc-block-v1.d.ts  proc-block-v1.js  rune-v1.d.ts  rune-v1.js  rune_v1.d.ts  rune_v1.js  runtime-v1.d.ts  runtime-v1.js  runtime_v1.d.ts  runtime_v1.js
rune/js/src/: index.d.ts  index.ts
rune/metadata-example/: Cargo.toml  README.md
rune/metadata-example/src/: lib.rs
rune/modulo/: Cargo.toml  README.md  bindings.patch  build.rs
rune/modulo/src/: bindings.rs  lib.rs
rune/wasmer-host/: Cargo.toml
rune/wasmer-host/src/: bindings.rs  lib.rs
