[package]
name = "metadata-example"
version = "0.1.0"
edition = "2021"
description = "A WebAssembly module that shows how to expose metadata to the runtime."
repository = "https://github.com/hotg-ai/wit-files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" }

[lib]
# By using cdylib we generate a *.wasm file. The rlib crate type lets us use
# this crate from other crates (e.g. integration tests).
crate-type = ["cdylib", "rlib"]
