[package]
name = "wasmer-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen-wasmer = { git = "https://github.com/wasmerio/wit-bindgen", branch = "wasmer" }
wit-bindgen-wasmtime = { git = "https://github.com/wasmerio/wit-bindgen" }
